# FlashDir

./: .gitignore  .taurignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src-tauri/app/src/: App.vue  index.html  main.js  main.js.bak  style.css
src-tauri/app/src/components/: Charts.vue  DevAnalyzer.vue  FileList.vue  GlobalSearchModal.vue  HistoryList.vue  RightPanel.vue  Sidebar.vue  SnapshotCompare.vue  SortIcon.vue  StatsTab.vue  StatusBar.vue  Toolbar.vue  TreeNode.vue  Treemap.vue
src-tauri/app/src/composables/: useSortWorker.js  useTauri.js  useTheme.js  useWasmSort.js
src-tauri/app/src/directives/: lazy.js
src-tauri/app/src/utils/: format.js  scanBinary.js  smartFilter.js
src-tauri/capabilities/: default.json
src-tauri/src/: binary_protocol.rs  commands.rs  dev_analyzer.rs  diff_engine.rs  disk_cache.rs  global_search.rs  lib.rs  main.rs  scan.rs
src-tauri/src/fs/: fallback_walker.rs  iocp_scanner.rs  mft_scanner.rs  mod.rs  usn_journal.rs  windows_walker.rs
src-tauri/src/perf/: mod.rs
src-tauri/templates/: index.html
src-tauri/wasm-sort/: Cargo.toml  build.ps1  build.sh
src-tauri/wasm-sort/src/: lib.rs
