[package]
name = "flashdir"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
lazy_static = "1.4"
dashmap = "6.1"
rayon = "1.10"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
lru = "0.12"
num_cpus = "1.16"
mimalloc = "0.1"
parking_lot = "0.12"
smartstring = { version = "1.0", features = ["serde"] }
ahash = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
