[package]
name = "flashdir"
version = "3.3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
lazy_static = "1.4"
dashmap = "6.1"
rayon = "1.10"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
lru = "0.12"
num_cpus = "1.16"
mimalloc = "0.1"
parking_lot = "0.12"
smartstring = { version = "1.0", features = ["serde"] }
ahash = "0.8"
bincode = "1.3"
bumpalo = "3.14"
string-interner = "0.14"
serde_bytes = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
sysinfo = "0.30"
rusqlite = { version = "0.30", features = ["bundled"] }
zstd = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_Security"] }

[features]
default = []
windows_fast_io = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
overflow-checks = false
debug-assertions = false
